@startuml dp1-state
!include _style.puml
title DP#1 State - 예약 상태별 행동 캡슐화
left to right direction
interface ReservationState <<State>> {
  +name(): String
}
class Reservation <<Context>> {
  -reservationId: Long
  -reservationNumber: String
  -requester: User
  -status: ReservationStatus
  -createdAt: LocalDateTime
  -reservationDate: LocalDateTime
  -itinerary: Itinerary
  -passengers: List<Passenger>
  -reservationItems: List<ReservationItem>
  -payments: List<Payment>
  -tickets: List<Ticket>
  -currentState: ReservationState
  --
  +getReservationId(): Long
  +getReservationNumber(): String
  +getRequester(): User
  +getStatus(): ReservationStatus
  +getPassengers(): List<Passenger>
  +getReservationItems(): List<ReservationItem>
  +getPayments(): List<Payment>
  +getTickets(): List<Ticket>
  +getItinerary(): Itinerary
  +addPassenger(): void
  +addReservationItem(): void
  +addPayment(): void
  +addTicket(): void
  +canBeCancelled(): boolean
  +evaluateImpactOfFlightStatusChange(): void
  +updateStatus(): void
  +findByPnr(): Reservation
  +setState(): void
  +getCurrentState(): ReservationState
  +getStateName(): String
  +enterPassengerInfo(): void
  +processPayment(): void
  +handlePaymentFailure(): void
  +issueTicket(): void
  +requestCancellation(): void
  +confirmCancellation(): void
  +requestRefund(): void
  +processRefundDecision(): void
  +setReservationNumber(): void
  +setRequester(): void
  +getPnrNumber(): String
  +getCreatedAt(): LocalDateTime
  +getReservationDate(): LocalDateTime
}
class InitiatedState {
  +name(): String
  +enterPassengerInfo(): void
}
class PendingPaymentState {
  +name(): String
  +processPayment(): void
  +handlePaymentFailure(): void
}
class ConfirmedState {
  +name(): String
  +issueTicket(): void
  +requestCancellation(): void
}
class TicketedState {
  +name(): String
  +requestCancellation(): void
}
class CancellationRequestedState {
  +name(): String
  +confirmCancellation(): void
}
class CancelledState {
  +name(): String
  +requestRefund(): void
  -resolveFareRule(): FareRule
}
class RefundRequestedState {
  +name(): String
  +processRefundDecision(): void
}
class RefundedState {
  +name(): String
}
ReservationState <|.. InitiatedState
ReservationState <|.. PendingPaymentState
ReservationState <|.. ConfirmedState
ReservationState <|.. TicketedState
ReservationState <|.. CancellationRequestedState
ReservationState <|.. CancelledState
ReservationState <|.. RefundRequestedState
ReservationState <|.. RefundedState
Reservation o--> ReservationState : currentState
note bottom of Reservation : 현재 상태 객체에 행동 위임
@enduml
